# MiraboxPlugins

./: .gitignore  BrightnessAction.cpp  BrightnessAction.h  CMakeLists.txt  PersonalPlugin.cpp  PersonalPlugin.h  README.md  main.cpp
tenelles.personal.sdPlugin/: manifest.json
